# MinimalFunctionCache

./: .gitignore  Apptainer.def  README.md  README.rst  cache_gen.sh  host_gen_bkpts.py  pyproject.toml  setup.py  version.txt
MinimalFunctionCacheGen/: cache_gen.sh  cache_job_setup.py  gen_rep_elems_for_cache_from_file.py
TEMP/: temp_job_info.sh
TEMP/Breakpoints/5/: bkpts_of_len_5_part_1.csv  bkpts_of_len_5_part_2.csv
TEMP/RepElems/5/: Pi_Min_5_part_0.csv  Pi_Min_5_part_1.csv  Pi_Min_5_part_3.csv
cutGen/: __init__.py  optimal_cut_generation.py  system_options.py
src/cacheUtils/: __init__.py  utils.py
src/cacheUtils/Breakpoints/4/: bkpts_of_len_4_part_0.csv  bkpts_of_len_4_part_1.csv  bkpts_of_len_4_part_2.csv
src/cacheUtils/MinimalFunctionCacheGen/: cache_job_setup.py  job_function_runner.sh
src/cutGen/: __init__.py
src/minimalFunctionCache/: ppl_vs_pplite_timing.py  utils.py
src/minimalFunctionCache/Breakpoints/2/: bkpts_of_len_2.csv
src/minimalFunctionCache/Breakpoints/3/: bkpts_of_len_3_part_0.csv
src/minimalFunctionCache/Breakpoints/4/: bkpts_of_len_4_part_0.csv  bkpts_of_len_4_part_3.csv
src/minimalFunctionCache/Breakpoints/5/: bkpts_of_len_5_part_0.csv  bkpts_of_len_5_part_1.csv  bkpts_of_len_5_part_2.csv  bkpts_of_len_5_part_3.csv
src/minimalFunctionCache/Breakpoints/6/: bkpts_of_len_6_part_0.csv  bkpts_of_len_6_part_1.csv  bkpts_of_len_6_part_10.csv  bkpts_of_len_6_part_11.csv  bkpts_of_len_6_part_12.csv  bkpts_of_len_6_part_13.csv  bkpts_of_len_6_part_14.csv  bkpts_of_len_6_part_15.csv  bkpts_of_len_6_part_16.csv  bkpts_of_len_6_part_17.csv  bkpts_of_len_6_part_18.csv  bkpts_of_len_6_part_19.csv  bkpts_of_len_6_part_2.csv  bkpts_of_len_6_part_20.csv  bkpts_of_len_6_part_21.csv  bkpts_of_len_6_part_22.csv  bkpts_of_len_6_part_23.csv  bkpts_of_len_6_part_24.csv  bkpts_of_len_6_part_25.csv  bkpts_of_len_6_part_26.csv  bkpts_of_len_6_part_27.csv  bkpts_of_len_6_part_28.csv  bkpts_of_len_6_part_29.csv  bkpts_of_len_6_part_3.csv  bkpts_of_len_6_part_30.csv  bkpts_of_len_6_part_31.csv  (+12 more)
src/minimalFunctionCache/minimalFunctionCacheGen/: Apptainer.def  README.rst  breakpoint_cache_setup.py  cache_gen.sh  cache_gen_cleanup.sh  cache_gen_run_parameters.sh  cache_job_setup.py  cluster_cache_gen.sh  gen_rep_elems_for_cache_from_file.py  job_function_runner.sh  local_cache_gen.sh  local_cahce_gen.sh  setup_cache_run.sh
src/minimalFunctionCacheGen/: Dockerfile  cache_gen_run_parameters.sh  cluster_cache_gen.sh  gen_rep_elems_for_cache_from_file.py  job_function_runner.sh  setup_cache_run.sh
src/minimalFunctionCacheGen/MemoryProfiling/: Apptainer_profile.def  memory_profile.sh  memory_profile_run.sh  profile_breakpoints.py
src/parametricCutGen/Experiments/: cluster_enviroment.sh  experiment.py  experiment_runner.py  experiments.py  run_cluster_experiments.sh
(+471 files in other folders)
