[build-system]
requires = [
  'setuptools>=61.2',
  'setuptools_scm[toml]>=6.0',
  'importlib-resources>=1.1.0',
]
build-backend = "setuptools.build_meta"

[project]
name = "MinimalFunctionCache"
description = "Necessary data for using pre-computed cell descriptions of the space of continuous minimal functions with at most k breakpoints."
authors = [
    {name = "Acadia Larsen", email = "acadia.larsen@gmail.com"},
]
dependencies = [
"cutgeneratingfunctionology",
 "pplitepy"]
requires-python = ">=3.9"
license = "GPL-2.0-or-later"
keywords = ["integer programming", "cutting planes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ['version']

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/ComboProblem/MinimalFunctionCache"


[tool.setuptools_scm]
write_to = 'version.txt'
version_scheme = 'post-release'
local_scheme = 'dirty-tag'

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv"]
